# morten-olsen.github.io

./: .babelrc  .eslintignore  .eslintrc  .eslintrc.cjs  .gitignore  .prettierrc.cjs  .prettierrc.json  .prettierrc.mjs  .u8.json  27cfabb586b0d97c865a9135b91658874d110ae02363277ef081e57cbfb36cc3-w400.avif  404.html  404.html.html  44f50174be57d39544603622b7561bbf0368f6363d99c7234ef0083cdb43af6d-w400.avif  562095883dd7a631108558ca10c346db2cf291fab1cbdfe0ddaa13e6c398b41d-w400.avif  5dd330349276a41c87a4263ae9a9c2665e636fc8b53d5e3a68e6d9ff1c8bf19b-w400.avif  7a41f950a10204b41d4c1c2bbba38f08f483db86a95ea2b1e0a0219a4222473d-w400.avif  :w  AGENTS.md  CLAUDE.md  CNAME  PUBLISHING.md  README.md  Taskfile.yml  astro.config.mjs  astro.config.ts  build.cue  data.json  dev-client.js  devbox.json  docker-compose.dev.yml  eslint.config.mjs  index.html  jest.config.js  mise.toml  next.config.js  nodemon.json  notes.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+5 more)
.claude/: settings.local.json
src/content/posts/does-your-tone-change-your-code/experiment/: FINDINGS.md  README.md  prompts.py  pyproject.toml  run_experiment.py
src/content/posts/the-back-of-the-box/experiment/: .gitignore  brief.md  findings.md  main.py  pyproject.toml
src/content/posts/the-elephant-in-the-context-window/experiment/: .gitignore  FINDINGS.md  FINDINGS_EXP1.md  FINDINGS_EXP2.md  FINDINGS_EXP2B.md  FINDINGS_EXP3.md  README.md  exp1_negation_similarity.py  exp2_context_fillers.py  exp2_negation_decay.py  exp2b_attention_decay.py  exp3_generation_compliance.py  prompts.py  pyproject.toml  shared.py
(+789 files in other folders)
